# olympic-data-explorer

./: .gitignore  ARCHITECTURE.md  README.md  SPEC.md  vercel.json
backend/: pyproject.toml  requirements.txt
backend/app/: api.py  data_loader.py  main.py
backend/scripts/: convert_to_sqlite.py
backend/tests/: conftest.py  test_api.py  test_data_loader.py  test_edge_cases.py  test_final_coverage.py  test_main.py
docs/: ARCHITECTURE.md  CHANGELOG.md  SPEC.md
docs/ADR/: ADR-001-fastapi.md  ADR-002-nextjs.md  ADR-003-pandas-in-memory.md  ADR-004-testing-strategy.md
frontend/: jest.config.ts  jest.setup.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/__tests__/app/: page.test.tsx
frontend/src/__tests__/components/: AthleteProfileCard.test.tsx  Dashboard.test.tsx  MedalTable.test.tsx
frontend/src/__tests__/contexts/: LanguageContext.test.tsx
frontend/src/__tests__/lib/: api.test.ts  flags.test.ts  translations.test.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: AthleteProfileCard.tsx  Dashboard.tsx  MedalTable.tsx
frontend/src/components/charts/: BiometricsChart.tsx  EvolutionChart.tsx  GenderPieChart.tsx  TopAthletesChart.tsx  WorldMap.tsx
frontend/src/components/ui/: AthleteSearch.tsx  ChartModal.tsx  ChartSkeleton.tsx  CountryFlag.tsx  LanguageSelector.tsx  RangeSlider.tsx  SearchableSelect.tsx
frontend/src/contexts/: LanguageContext.tsx
frontend/src/lib/: api.ts  flags.ts
frontend/src/lib/i18n/: translations.ts
frontend/src/types/: react-simple-maps.d.ts
(+13 files in other folders)
